added readme and changed index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-Hello World
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>GitHub Page Thomas Beck</title>
+	</head>
+	<body>
+		<nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="/about">About</a></li>
+        		<li><a href="/cv">CV</a></li>
+        		<li><a href="/blog">Blog</a></li>
+    		</ul>
+		</nav>
+		<div class="container">
+    		<div class="blurb">
+        		<h1>Hi there, my Name is Thomas Beck</h1>
+				<p>This is my first try of a GitHub Page made with <a href="https://jekyllrb.com">Jekyll</a></p>
+    		</div><!-- /.blurb -->
+		</div><!-- /.container -->
+		<footer>
+    		<ul>
+        		<li><a href="mailto:beckthomas1971@googlemail.com">email</a></li>
+        		<li><a href="https://beckthomas.github.io/">beckthomas.github.io/</a></li>
+			</ul>
+		</footer>
+	</body>
+</html>
+
